Add photo gallery section to yes_page.html

--- a/yes_page.html
+++ b/yes_page.html
@@ -7,11 +7,55 @@
     <link rel="stylesheet" href="./yes_style.css">
 </head>
 <body>
+    <!-- Floating hearts background -->
+    <div class="hearts-background"></div>
+    
     <div class="container">
+        <!-- Valentine decorations at top -->
+        <div class="top-decorations">
+            <span class="emoji">💕</span>
+            <span class="emoji">🌹</span>
+            <span class="emoji">💝</span>
+        </div>
+
         <h1 class="header_text">Knew you would say yes! I love you Salma ❤️</h1>
+        
         <div class="gif_container">
             <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmo3c3l5ODh3ZGN6NHhhaDE2Mjg1ZjkwOXczdDFxbWM3dTBtaW9zaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/9XY4f3FgFTT4QlaYqa/giphy.gif">
         </div>
+
+        <!-- Photo gallery section -->
+        <div class="photo-section">
+            <h2 class="gallery-heading">Our Memories Together 💑</h2>
+            <div class="photo-grid">
+                <!-- Replace these src values with your actual photo URLs -->
+                <div class="photo-item">
+                    <img src="YOUR_PHOTO_URL_1" alt="Us 1" class="couple-photo">
+                    <p class="photo-caption">Memory 1</p>
+                </div>
+                <div class="photo-item">
+                    <img src="YOUR_PHOTO_URL_2" alt="Us 2" class="couple-photo">
+                    <p class="photo-caption">Memory 2</p>
+                </div>
+                <div class="photo-item">
+                    <img src="YOUR_PHOTO_URL_3" alt="Us 3" class="couple-photo">
+                    <p class="photo-caption">Memory 3</p>
+                </div>
+                <div class="photo-item">
+                    <img src="YOUR_PHOTO_URL_4" alt="Us 4" class="couple-photo">
+                    <p class="photo-caption">Memory 4</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Bottom decorations -->
+        <div class="bottom-decorations">
+            <span class="emoji">💐</span>
+            <span class="emoji">🍫</span>
+            <span class="emoji">💌</span>
+        </div>
     </div>
+
+    <script src="./yes_animations.js"></script>
 </body>
 </html>
