Replace placeholder photo URL with actual URL
Updated photo URL for the first memory image.

--- a/yes_page.html
+++ b/yes_page.html
@@ -30,7 +30,7 @@
             <div class="photo-grid">
                 <!-- Replace these src values with your actual photo URLs -->
                 <div class="photo-item">
-                    <img src="YOUR_PHOTO_URL_1" alt="Us 1" class="couple-photo">
+                    <img src="https://drive.google.com/drive-viewer/AKGpihagedLkU_D5u_dsRPzft7rt9BRlmH6Ufvx-Dy8m7Ze4RF3EJ8m7YY72wIguliuPVJ3ZTIJ4bcrj1tRTdI2nsMVv_q4xqDRNpd8=s1600-rw-v1" alt="Us 1" class="couple-photo">
                     <p class="photo-caption">Memory 1</p>
                 </div>
                 <div class="photo-item">
