--- a/yes_page.html
+++ b/yes_page.html
@@ -26,24 +26,24 @@
 
         <!-- Photo gallery section -->
         <div class="photo-section">
-            <h2 class="gallery-heading">Our Memories Together 💑</h2>
+            <h2 class="gallery-heading">💑</h2>
             <div class="photo-grid">
                 <!-- Replace these src values with your actual photo URLs -->
                 <div class="photo-item">
-                    <img src="YOUR_PHOTO_URL_1" alt="Us 1" class="couple-photo">
-                    <p class="photo-caption">Memory 1</p>
+                    <img src="./images/image0.jpg" alt="Us 1" class="couple-photo">
+                    <p class="photo-caption">YOU</p>
                 </div>
                 <div class="photo-item">
-                    <img src="YOUR_PHOTO_URL_2" alt="Us 2" class="couple-photo">
-                    <p class="photo-caption">Memory 2</p>
+                    <img src="./images/IMG_5694.PNG" alt="Us 2" class="couple-photo">
+                    <p class="photo-caption">ARE</p>
                 </div>
                 <div class="photo-item">
-                    <img src="YOUR_PHOTO_URL_3" alt="Us 3" class="couple-photo">
-                    <p class="photo-caption">Memory 3</p>
+                    <img src="./images/IMG_9135.jpg" alt="Us 3" class="couple-photo">
+                    <p class="photo-caption">SO</p>
                 </div>
                 <div class="photo-item">
-                    <img src="YOUR_PHOTO_URL_4" alt="Us 4" class="couple-photo">
-                    <p class="photo-caption">Memory 4</p>
+                    <img src="./images/temp_image_1A0CBD2C-E45F-4E7A-9EEA-B2775F3FE418.jpg" alt="Us 4" class="couple-photo">
+                    <p class="photo-caption">GORGEOUS</p>
                 </div>
             </div>
         </div>
