Update buttons and GIF in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,11 +11,11 @@
     <div class="container">
         <h1>Will you be my Valentine?</h1>
         <div class="buttons">
-            <button class="yes-button" onclick="handleYesClick()">Yes</button>
-            <button class="no-button" onclick="handleNoClick()">No</button>
+            <button class="yes-button">Yes</button>
+            <button class="no-button">No</button>
         </div>
         <div class="gif_container">
-            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbGZxY2x1NWV1M2lpMnUxOWY4dWR0eGM5cXpwaGthaTZ5MnVseGNzaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/i1BPOZfS1eZVsrjyax/giphy.gif" alt="Cute GIF">
+            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbGZxY2x1NWV1M2lpMnUxOWY4dWR0eGM5cXpwaGthaTZ5MnVseGNzaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/i1BPOZfS1eVsrjyax/giphy.gif" alt="Cute GIF">
         </div>
     </div>
     <script src="script.js"></script>
